[package]
name = "nexlib"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
eframe = "0.27.2"
egui = "0.27.2"
egui_dock = "0.12.0"
egui_extras = "0.27.2"
env_logger = "0.11.3"
serialport = "4.3"
